--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li><b>1. Übungsblatt</b>
                 <ul type="circle">
-                    <li><a href="#">1.4. HTML Wireframe</a></li>
+                    <li><a href="aufgabe1.4.html">1.4. HTML Wireframe</a></li>
                 </ul>
 
                 
