--- a/about.html
+++ b/about.html
@@ -11,18 +11,18 @@
             <div class="nav">
                 <img class="logo" src="logos/hbrs.png" alt="">
                 <ul>
-                    <li><a href="index.html" class="active"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                    <li><a href="index.html" ><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
                     <li><a href="tasks.html"><i class="fa fa-tasks" aria-hidden="true"></i></i>Übungen</a>
                         <div class="subtasks">
                             <ul>
                                 <li><a href="#"> HTML </a>
                                     <div class="subsubtasks">
                                         <ul>
-                                            <li><a href="task1-4.html"> Übung 1.4 </a></li>
+                                            <li><a href="task1-4.html">Übung 1.4 </a></li>
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="#"> CSS</a>
+                                <li><a href=""> CSS</a>
                                     <div class="subsubtasks">
                                         <ul>
                                             <li><a href="#">Übung 1.2 </a></li>
@@ -39,7 +39,7 @@
                     
                     </li>
     
-                    <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i></i>About me</a></li>
+                    <li><a href="about.html"  class="active"><i class="fa fa-info-circle" aria-hidden="true"></i></i>About me</a></li>
                     <li><a href="contact.html"><i class="fa fa-envelope"></i>Contact</a></li>
                 </ul>
             </div>
